welcome.lessons.welcome.bat.bool2.InOrder.scala.error
inOrder:5: error: ')' expected but 'if' found.
  if (bOk & (c>b){
  ^inOrder:8: error: ')' expected but '}' found.
} 
^